Fixed Gap between Footer review box

--- a/landingpagecss.css
+++ b/landingpagecss.css
@@ -1,5 +1,6 @@
 /* -----------------------------------------------Background-------------------------------------------------------- */
 body {
+  margin: 0;
   background-color: black;
   background-image: url("Backgroundimage.png");
   background-size: cover;
@@ -142,8 +143,8 @@ select {
   justify-content: center;
   margin: none;
   padding-top: 30px;
-  grid-template-columns: 1 span;
-  grid-template-rows: 200px 120px 150px;
+  grid-template-columns: 1/1 span;
+  grid-template-rows: 200px 120px 150px 400px 150px;
 }
 /* --Heading-- */
 .head {
@@ -154,6 +155,7 @@ select {
   font-size: 3.7rem;
   justify-self: center;
 }
+
 /* --Description-- */
 .desc {
   color: #f0ff00;
@@ -166,6 +168,7 @@ select {
 .bold br {
   display: none;
 }
+
 /* -------Result reflection area---- */
 .results {
   background-color: #5500ff79;
@@ -174,7 +177,7 @@ select {
 }
 p {
   font-family: "Nunito Sans", sans-serif;
-  /* background-color: rgb(0, 255, 0); */
+  background-color: rgb(0, 255, 0);
   height: 167px;
   border-radius: 10px;
   padding-left: 10px;
@@ -204,7 +207,7 @@ footer{
   color: white;
   padding-left: 16px;
   padding-bottom: 10px;
-  font-size: 0.85rem;
+  font-size: 0.92rem;
 }
 .quicklink{
   color: yellow;
@@ -254,8 +257,11 @@ footer{
   display: none;
 }
 .logoforfoot{
-  padding-top: 0.7rem;
+  padding-top: 1.6rem;
+  padding-left: 1.2rem;
+  padding-bottom: 0.4rem;
 }
+
 /* ---------------------------------------------------------------------------Responsive code starts here------------------------------------------------- */
 @media (max-width: 790px) {
   /* --Background-- */
@@ -290,7 +296,8 @@ footer{
   }
   .navbar-brand {
     margin: 0px;
-    padding-left: 5px;
+    padding-left: 1rem;
+    padding-top: 0.4rem;
   }
   .icon-bar {
     display: block;
@@ -354,9 +361,9 @@ footer{
     margin: none;
     padding-top: 30px;
     grid-template-columns: 1 span;
-    grid-template-rows: 130px 80px 150px;
+    grid-template-rows: 130px 80px 150px 400px 150px;
   }
-    /* -------------footer-------------- */
+  /* -------------footer-------------- */
   .footer{
     display: grid;
     grid-template-rows: 250px 180px 170px;
@@ -400,6 +407,7 @@ footer{
   .email b{
     padding-left: 1.1rem;
   }
+
   /* -------------------------------------------------------------------For smaller width devices--------------------------------------------- */
   @media (max-width: 398px) {
     .head {
@@ -442,7 +450,7 @@ footer{
       border: #fff;
       background-color: white;
     }
-        .footer{
+    .footer{
       display: grid;
       grid-template-rows: 250px 180px 170px;
       grid-template-columns: 370px;
